# rqt_bag_meri_annotator

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
resource/: MeriPlugin.ui
src/rqt_bag_meri_annotator/: annotator_plugin.py  annotator_widget.py  meri_plugin.py
